# Controller/attendanceContro.js
@@ -43,7 +43,7 @@ exports.checkOut = (req, res) => {
 
 exports.getAll = (req, res) => {
     //#swagger.tags = ['Attendance controller']
-    const { date,  month } = req.query;
+    const { date, month } = req.query;
     attendanceService
         .getAll(req.query)
         .then((response) => {
@@ -73,14 +73,16 @@ exports.getAllById = (req, res) => {
 
 exports.getAllAttendance = (req, res) => {
     //#swagger.tags = ['Attendance controller']
-    const {startDate, endDate, type } = req.query;
+    const { startDate, endDate, type, month } = req.query;
     attendanceService
         .getAllAttendance(req.query)
         .then((response) => {
             return res.status(200).json(response);
         })
         .catch((error) => {
-            return res.status(500).json({
+            const status = error.statusCode || 500;
+            return res.status(status).json({
+                success: false,
                 message: error.message || "Internal server error",
             });
         });
