# swagger-output.json
@@ -281,14 +281,16 @@
             "name": "type",
             "in": "query",
             "type": "string"
+          },
+          {
+            "name": "month",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
